# algo-trading

./: .gitignore  LICENSE  README.md  Settings.py  main.py  pyproject.toml
OHLC_DATA/FX/12h/: EURUSD.csv
OHLC_DATA/FX/1d/: EURUSD.csv
OHLC_DATA/FX/1m/: EURUSD.csv
OHLC_DATA/FX/1w/: EURUSD.csv
OHLC_DATA/FX/2h/: EURUSD.csv
OHLC_DATA/FX/4h/: EURUSD.csv
OHLC_DATA/FX/6h/: EURUSD.csv
OHLC_DATA/crypto/: Chart.csv
analyzers/: Analyzer.py_  MyAnalyzer.py  runAnalysis.py
helpers/: MyBuySell.py  Observer.py  Plotter.py  get_data.py
indicators/: ADX.py  ATR.py  Direction.py  Divergence.py  DoubleCross.py  EdgeFractal.py  Edges.py  EducatedDancer.py  FillFractal.py  Fractal.py  FractalContinuation.py  Fractal_161.py  LinearRegression.py  LinearRegressionSlope.py  Lines_161.py  MACD.py  PRZ.py  RSI.py  RSIDivergence.py  RSI_Fractal.py  RSI_divergence.py  Ranges.py  Ranging.py  Regression.py  SpecialFractal.py  SupportAndResistance.py  Trail.py  Trail_ATR.py  Trail_Fractal.py  Trend.py  WilliamAlligator.py  Willy.py  indicator_hhll.py  indicator_llhh.py  tags
signals/: Direction.py  Internals.py  InternalsSum.py  MA_Cross_Signal.py  Structure.py  WilliamSignal.py  tags
strategies/: BaseStrategy.py  Bold.py  Divergence.py  EducatedGambler.py  HHLL_Long_Strategy.py  MACross.py  RSI.py  S161.py  SAR_Strategy.py  tags
trades/: check_pending_orders.py  close_trade.py  create_trade.py  get_size.py  update_trades.py
